feat(build) : add jacoco and sonar